# avio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cmake/: FindSDL2_ttf.cmake
docs/: requirements.txt
docs/source/: application.rst  callback.rst  conf.py  howto.rst  index.rst  installation.rst  objects.rst  onscreen.rst  quickstart.rst  sample.rst
include/: Clock.h  Decoder.h  Display.h  Encoder.h  Event.h  Exception.h  Factory.h  Filter.h  Frame.h  Gui.h  Hud.h  Osd.h  Pipe.h  PyRunner.h  Queue.h  Reader.h  Writer.h  numpy_init.h
python/: box.py  darknet.py  db_reader.py  echo.py  harvest.py  merge.py  play.py  retinanet.py  stats.py  storage.py  test.py  trim.py  viewer.py  viewer_old.py  yolov5.py
python/bytetrack/: interface.py  trt.py  worker.py
python/deep_sort/: interface.py  tracker.py
python/detectron2/: detection.py  instancesegmentation.py  keypoint.py  predictor.py  segment.py  tracker.py
python/detectron2/configs/COCO-Detection/: faster_rcnn_R_50_FPN_3x.yaml
python/detectron2/models/COCO-Detection/: script
python/detectron2/models/COCO-InstanceSegmentation/: script
python/detectron2/models/COCO-Keypoints/: script
python/detectron2/models/COCO-PanopticSegmentation/: script
python/mmlab/: detection.py  pose.py  segment.py
python/segment/: interface.py  label_color_map.py  segmentation_utils.py
python/yolov7/detection/: detection.py
python/yolov7/keypoint/: keypoint.py
python/yolov7/keypoint/utils/: plots.py
recipe/: README.txt  meta.yaml
src/: Clock.cpp  Decoder.cpp  Display.cpp  Encoder.cpp  Event.cpp  Exception.cpp  Filter.cpp  Frame.cpp  Gui.cpp  Hud.cpp  Osd.cpp  Pipe.cpp  PyRunner.cpp  Reader.cpp  Writer.cpp  avio.cpp
tests/: test_basic.py
